--- a/Domain/Domain.fsproj
+++ b/Domain/Domain.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="Search.fs" />
     <Compile Include="SearchParser.fs" />
     <Content Include="packages.config" />
+    <Compile Include="ShoppingCart.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FParsec">
