--- a/Web/Web.fsproj
+++ b/Web/Web.fsproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\PhoneController.fs" />
     <Compile Include="Controllers\ManufacturerController.fs" />
     <Compile Include="Controllers\AuthenticationController.fs" />
+    <Compile Include="Controllers\ShoppingCartController.fs" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Phone\Show.cshtml" />
     <Content Include="Views\Phone\Search.cshtml" />
